--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -6,7 +6,7 @@ header {
 }
 
 .icon {
-    background-image: url("../images/3-icon.png");
+    background-image: url("../images/icon.png");
     background-color: white;
     height: 70px;
     width: 100%;
