--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,11 +1,11 @@
 footer {
-    background-color: white;
+	background-color: white;
     height: 60px;
     width: 100%;
-    bottom: 0;
-    display: flex;
-    position: fixed;
-    justify-content: center;
-    line-height: 60px;
     border-top: 1px solid #CCCCCC;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	bottom: 0;
 }
