--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,97 +1,101 @@
-section.filters {
-    color: white;
+.filters{
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px solid #DDDDDD;
+    border: solid 1px #DDDDDD;
     border-radius: 4px;
-    display: flex;
+    text-align: right;
 }
 
-section.filters button {
+section.filters button{
+    margin-top: 11px;
+    margin-bottom: 11px;
+    margin-right: 30px;
     font-size: 18px;
     background-color: #FF5A5F;
-    color: #FFFFFF;
+    color: white;
     height: 48px;
     width: 20%;
-    border: 0;
+    border: none;
     border-radius: 4px;
-    margin: auto 30px;
 }
 
 section.filters button:hover {
-    opacity: 90%;
+    opacity: 0.9;
 }
 
-section.filters div.locations,
-section.filters div.amenities {
-  height: 100%;
-  width: 25%;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-}
-section.filters div.locations {
-  border-right: 1px solid #dddddd;
+.locations{
+    text-align: left;
+    height: 100%;
+    width: 25%;
+    border-right: solid 1px #DDDDDD;
+    float: left;
 }
 
-section.filters div.amenities {
-  margin-right: auto;
+.amenities{
+    text-align: left;
+    align-content: flex-start;
+    height: 100%;
+    width: 25%;
+    float: left;
 }
-div.locations h3,
-div.amenities h3 {
-  font-weight: 600;
-  margin-bottom: 0px;
-  margin-left: 50px;
+
+.amenities h3, .locations h3{
+    font-weight: 600;
+    margin: 0px;
+    margin-top: 17px;
+    padding: 0px;
+    padding-left: 30px;
 }
-div.locations h4,
-div.amenities h4 {
-  font-weight: 400;
-  font-size: 14px;
-  margin: 4px auto;
-  margin-left: 50px;
-  margin-bottom: 16px;
+
+.amenities h4, .locations h4{
+    margin: 0px;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 14px;
+    padding-left: 30px;
 }
-ul.popover {
+
+.popover{
+    visibility: hidden;
+    position: relative;
+    background-color: #FAFAFA;
+    border: solid #DDDDDD 1px;
+    border-radius: 4px;
+    margin-top: 7%;
+    padding-bottom: 10%;
+    z-index: 1;
+}
+
+.popover li h2{
+    padding: 0;
+    margin: 0;
+}
+
+.popover_list{
+    padding:0px;
+    margin:0px;
+    padding-left: 10%;
+}
+
+li{
+    list-style-type: none;
+    padding-bottom: 5%;
+}
+
+ul{
+    padding-top: 30px;
+}
+
+.locations:hover >.popover{
+    visibility: visible;
+    margin-bottom: 50px;
+}
+
+.amenities:hover > .popover{
+    visibility: visible;
+}
+
+ul {
   list-style: none;
-  border: 1px solid #dddddd;
-  border-radius: 4px;
-  background-color: #fafafa;
-  margin-top: 0px;
-  padding-left: 0px;
-  padding-bottom: 20px;
-  padding-top: 20px;
-}
-div.locations ul,
-div.amenities ul {
-  display: none;
-}
-section.filters div.locations:hover > ul,
-section.filters div.amenities:hover > ul {
-  display: block;
-  z-index: 999;
-}
-section.filters div.locations,
-section.filters div.amenities {
-  height: 100%;
-  width: 25%;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-}
-div.locations ul.popover {
-  padding-bottom: 45px;
-}
-div.locations ul.popover li h2 {
-  font-size: 18px;
-  padding-left: 35px;
-  margin-bottom: 4px;
-  margin-top: 0px;
-}
-div.locations ul.popover li h2.California {
-  margin-top: 30px;
-}
-div.locations ul.popover li p,
-div.amenities ul.popover li p {
-  padding-left: 50px;
-  margin: 6px;
 }
